--- a/notebooks/unit1/unit1.ipynb
+++ b/notebooks/unit1/unit1.ipynb
@@ -404,24 +404,24 @@
       "source": [
         "import gymnasium as gym\n",
         "\n",
-        "# First, we create our environment called LunarLander-v2\n",
+        "# 首先创建环境 environment called LunarLander-v2\n",
         "env = gym.make(\"LunarLander-v2\")\n",
         "\n",
-        "# Then we reset this environment\n",
+        "# 重置环境\n",
         "observation, info = env.reset()\n",
         "\n",
         "for _ in range(20):\n",
-        "  # Take a random action\n",
+        "  # 采取随机动作\n",
         "  action = env.action_space.sample()\n",
         "  print(\"Action taken:\", action)\n",
         "\n",
-        "  # Do this action in the environment and get\n",
+        "  # 执行动作， 得到以下信息\n",
         "  # next_state, reward, terminated, truncated and info\n",
         "  observation, reward, terminated, truncated, info = env.step(action)\n",
         "\n",
-        "  # If the game is terminated (in our case we land, crashed) or truncated (timeout)\n",
+        "  # 如果游戏终止（着陆或撞坏了）或者超时\n",
         "  if terminated or truncated:\n",
-        "      # Reset the environment\n",
+        "      # 重置环境\n",
         "      print(\"Environment is reset\")\n",
         "      observation, info = env.reset()\n",
         "\n",
@@ -638,7 +638,7 @@
         "# TODO: Define a PPO MlpPolicy architecture\n",
         "# We use MultiLayerPerceptron (MLPPolicy) because the input is a vector,\n",
         "# if we had frames as input we would use CnnPolicy\n",
-        "model ="
+        "model = PPO('MlpPolicy', env, verbose=1 )"
       ]
     },
     {
@@ -687,14 +687,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "qKnYkNiVp89p"
+        "id": "qKnYkNiVp89p",
+        "collapsed": true
       },
       "outputs": [],
       "source": [
         "# TODO: Train it for 1,000,000 timesteps\n",
-        "\n",
+        "model.learn(total_timesteps=1000000)\n",
         "# TODO: Specify file name for model and save the model to file\n",
-        "model_name = \"ppo-LunarLander-v2\"\n"
+        "model_name = \"ppo-LunarLander-v2\"\n",
+        "model.save(model_name)\n"
       ]
     },
     {
@@ -749,13 +751,13 @@
       "source": [
         "# TODO: Evaluate the agent\n",
         "# Create a new environment for evaluation\n",
-        "eval_env =\n",
+        "eval_env = Monitor(gym.make(\"LunarLander-v2\", render_mode='rgb_array'))\n",
         "\n",
         "# Evaluate the model with 10 evaluation episodes and deterministic=True\n",
-        "mean_reward, std_reward =\n",
+        "mean_reward, std_reward = evaluate_policy(model, eval_env, n_eval_episodes=10, deterministic=True)\n",
         "\n",
         "# Print the results\n",
-        "\n"
+        "print(f\"mean_reward={mean_reward:.3f} +/- {std_reward}\")\n"
       ]
     },
     {
@@ -903,20 +905,20 @@
         "\n",
         "## TODO: Define a repo_id\n",
         "## repo_id is the id of the model repository from the Hugging Face Hub (repo_id = {organization}/{repo_name} for instance ThomasSimonini/ppo-LunarLander-v2\n",
-        "repo_id =\n",
+        "repo_id = \"cswind/DeepRL\"\n",
         "\n",
         "# TODO: Define the name of the environment\n",
-        "env_id =\n",
+        "env_id = \"LunarLander-v2\"\n",
         "\n",
         "# Create the evaluation env and set the render_mode=\"rgb_array\"\n",
         "eval_env = DummyVecEnv([lambda: Monitor(gym.make(env_id, render_mode=\"rgb_array\"))])\n",
         "\n",
         "\n",
         "# TODO: Define the model architecture we used\n",
-        "model_architecture = \"\"\n",
+        "model_architecture = \"PPO\"\n",
         "\n",
         "## TODO: Define the commit message\n",
-        "commit_message = \"\"\n",
+        "commit_message = \"train 1000000 epochs\"\n",
         "\n",
         "# method save, evaluate, generate a model card and record a replay video of your agent before pushing the repo to the hub\n",
         "package_to_hub(model=model, # Our trained model\n",
